GNOME Bugzilla – Bug 709854
Wayland: Reliable crash when hovering over items with an associated tooltip
Last modified: 2013-10-15 22:21:24 UTC
Environment: jhbuild as per https://wiki.gnome.org/Wayland/TryingIt in F20. Steps to reproduce: 1. Launch gtk3-demo 3.10 with the wayland backend 2. Launch the Tool Palette demo 3. Hover the mouse over one of the toolbar items on the left Expected results: gtk3-demo would not crash. Actual results: gtk3-demo crashes 100% of the time. ------------------------
+ Trace 232602